--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,3 +11,10 @@ body {
     margin: 0;
     padding: 0;
 }
+
+h1 {
+    font-size: 2.5rem; 
+    color: #222831; 
+    text-align: center; 
+    letter-spacing: 0.4rem; 
+}
