--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,3 +18,10 @@ h1 {
     text-align: center; 
     letter-spacing: 0.4rem; 
 }
+
+section {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    margin-bottom: 3rem; 
+}
