--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,3 +25,14 @@ section {
     align-items: center; 
     margin-bottom: 3rem; 
 }
+
+section input {
+    width: 30rem; 
+    border: none; 
+    padding: 1rem; 
+    border-radius: 1.5rem; 
+    margin-bottom: 1rem; 
+    color: #45474B; 
+    font-size: 1rem; 
+    box-sizing: border-box; 
+}
