--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,3 +36,13 @@ section input {
     font-size: 1rem; 
     box-sizing: border-box; 
 }
+
+section button {
+    padding: 0.8rem 1.2rem; 
+    border: none; 
+    border-radius: 1.5rem; 
+    background-color: #30475E; 
+    color: #F5F7F8; 
+    font-size: 1rem; 
+    cursor: pointer; 
+}
