--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,3 +63,8 @@ section button {
     margin-bottom: 1rem; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
+
+.item-resultado h2 {
+    font-size: 1.5rem; 
+    color: #222831; 
+}
